-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.0.0-beta
-
None
-
MacOSX.
-
cf873a13b74e16c695e56cbfad114133848e9e13
I am unable to inspect an object using mouse cursor while debugging with lldb. Debugging tooltips not popping up. It works well with gdb.
Most recent master branch build.
- relates to
-
QTCREATORBUG-8825 LLDB debugger does not work
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-10690 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
70643,2 | Debugger: Pass tooltip data to LLDB backend | 3.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
70756,1 | Debugger: Handle tooltip data in LLDB backend | 3.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |